Fix align-self

--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@ body, code {
 #alert {
   font-size: calc(16px + 2vw);
   position: absolute;
-  align-self: end;
+  align-self: flex-end;
   padding: 1em;
 }
 @media (max-width: 575px) {
